--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
         <img src="imagens/mapa.png">
       </div>
       <ul class="dados">
-        <li>contato@origamid.com</li>
-        <li>+55 (21) 9999-9999</li>
+        <li>giselly.avpereira@gmail.com</li>
+        <li>+55 (98) 9999-9999</li>
         <li>Rua do Conde, nº 21</li>
         <li>Rio de Janeiro - RJ</li>
         <li>Doe <span class="btc-preco">0</span> bitcoin para nos ajudar</li>
