--- a/index.html
+++ b/index.html
@@ -167,6 +167,6 @@
       </form>
     </div>
   </section>
-  <script src="main/main.js"></script>  
+  <script src="main.js"></script>  
 </body>
 </html>
